--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,34 +30,36 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/persona1.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
+          <p class="title">Dealer 1</p>
+          <p>Carlos Torres</p>
+          <p class="card-text">Es un asesor experimentado que conoce a fondo cada modelo del concesionario. Se caracteriza por su paciencia y por ayudar a los clientes a encontrar el auto ideal para sus necesidades.</p>
           <p>person1@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/persona2.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
+          <p class="title">Dealer 2</p>
+          <p>Laura Martínez</p>
+          <p class="card-text">Tiene un estilo cercano y claro al explicar opciones de financiamiento y beneficios. Su objetivo es que cada cliente se sienta seguro y satisfecho con su compra.</p>
           <p>person2@example.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/persona3.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
+          <p class="title">Dealer 3</p>
+          <p>Andrés Caicedo</p>
+          <p class="card-text">Apasionado por la innovación automotriz y la tecnología de los vehículos. Siempre busca ofrecer la mejor experiencia de atención personalizada.</p>
           <p>person3@example.com</p>
         </div>
       </div>
